src/frontend/home/app/home.module.css
@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');

.homePageContainer {
    height: 100%;
    overflow: auto;
    display: flex;
    flex-direction: column;
}

.homePage {
    flex-grow: 1;

    display: flex;
    flex-direction: column;
    justify-content: center;

    font-family: 'Chakra Petch', sans-serif;
}

.homePageTitle {
    font-size: clamp(32px, 5vh + 8px, 48px);
    font-weight: 900;
    color: black;
    text-align: center;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    .homePageTitleAcedemicTextContainer {
        display: flex;
        align-items: center;
    }

    .homePageTitleAce {
        color: #3757ea;
        font-size: 1em;
    }

    .homePageTitleDemic {
        font-size: 0.9em;
    }

    .homePageTitleHomeContainer {
        display: flex;
        font-size: 0.9em;
    }

    .homeTitleIcon {
        width: auto;
        height: 1em;
        margin: 5px 5px 0 0;
    }

    .homePageTitleHomeText {
    }

    padding: 0.5rem;
}

.homePageSubTitle {
    font-size: clamp(1.25rem, 3vh + 4px, 1.5rem + 4px);
    font-weight: 900;
    color: black;
    text-align: center;
}

.optionCardsContainer {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
    grid-auto-rows: 1fr;
    grid-gap: clamp(10px, 3vh - 2px, 20px);
    padding: clamp(10px, 3vh - 2px, 20px) 20px;

    @media (min-width: 500px) {
        padding: clamp(10px, 3vh - 2px, 20px) clamp(20px, 40vw - 200px, 1000px);
    }

    @media (max-height: 460px) {
        grid-template-columns: repeat(2, minmax(200px, 1fr));
    }
}

.optionCard {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    padding: clamp(10px, 3vh - 4px, 20px);

    border-radius: 10px;

    color: black;


    text-decoration: none;

    font-family: 'Chakra Petch', sans-serif;

    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
    transition: all 0.3s;

    &:hover {
        transform: translateY(-10px);
        box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
    }

    &.challengeCard {
        /*background-color: rgba(119, 20, 128, 1);*/
        background: linear-gradient(90deg, rgba(119, 20, 128, 1), rgba(109, 20, 128, 1));

        &:hover {
            box-shadow: 0 0 20px rgba(0, 0, 0, 1);
        }
    }

    &.trackerCard {
        /* background-color: #f9deb9; */
        background: linear-gradient(90deg, rgba(249, 222, 185, 1), rgba(239, 212, 175, 1));
    }
}

.challengeCardDescription {
    font-size: 1rem;
    color: white;
}

.trackerCardDescription {
    font-size: 1rem;
    color: black;
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}


.logoContainer {
    font-size: clamp(32px, min(5vh + 16px, 8vw + 20px), 56px);

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    animation: fadeIn 0.5s ease;
}

.acedemicTextContainer {
    display: flex;
    align-items: center;

    .aceText {
        font-size: 1em;
        font-weight: 900;
    }

    .demicText {
        font-size: 0.9em;
        color: black;
    }
}

.challengeLogoContainer {
    .aceText {
        color: #7df4beff;
    }

    .demicText {
        color: white;
    }

    .challengeAndTrophiesContainer {
        width: 100%;
        display: flex;
        align-items: center;
        justify-content: center;

        font-size: 0.7em;

        .medalIcon {
            width: auto;
            height: 1em;
            margin-top: -5px;
        }

        .challengeText {
            font-size: 1em;
            color: white;
        }

        .trophyIcon {
            width: auto;
            height: 1em;
            margin-top: -2px;
        }
    }
}

.trackerLogoContainer {
    padding: 0 2rem;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    animation: fadeIn 0.5s ease;

    .aceText {
        color: #592e25;
    }

    .demicText {
        color: black;
    }

    .trackerAndCheckboxContainer {
        width: 100%;
        display: flex;
        align-items: center;
        justify-content: end;

        font-size: 0.7em;

        .trackerText {
            font-size: 1em;
            color: black;
        }

        .checkBox {
            width: 1em;
            height: 1em;

            background-color: transparent;

            border-radius: 5px;
            border: 4px solid #592e25;

            position: relative;

            box-sizing: border-box;
        }

        .checkBox::after {
            pointer-events: none;

            content: '';
            position: absolute;
            left: 0;
            bottom: -3px;
            width: 150%;
            height: 150%;

            background-repeat: no-repeat;
            background-position: left center;
            background-size: contain;
            background-image: url("../tracker-checkmark.png");

            /*clip-path: inset(0 100% 0 0);*/
            transition: clip-path 0.5s ease;
        }
    }
}

